# dominant-color

./: Cargo.toml  README.md
.github/workflows/: publish.yml
examples/: extract_directory.rs  extract_dominant.rs
src/: lib.rs
