[package]
name = "dominant-color-rs"
version = "0.2.0"
edition = "2024"
description = "A library to extract the most dominant color from an image using K-Means clustering and silhouette scoring."
license = "MIT"
repository = "https://github.com/stepanmracek/dominant-color"
readme = "README.md"
keywords = ["color", "palette", "image", "k-means", "dominant-color"]
categories = ["multimedia::images", "algorithms"]

[dependencies]
image = "0.25.10"
rand = "0.10.0"
